# aoc

./: .envrc  .gitignore  aoc.cabal  flake.nix  fourmolu.yaml  shell.nix  treefmt.toml
.devcontainer/: devcontainer.json
2021/day1/: day1.hs
2021/day2/: day2.hs
2021/day3/: day3.hs
2021/day4/: day4.hs
src/: AocUtil.hs  MegaParsecUtil.hs
src/Y2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day1.hs  Day15.hs  Day16.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
src/Y2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day20.hs  Day21.hs
src/Y2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs
