cabal-version: 2.4
name:          aoc
version:       0.1.0.0
author:        Spencer Janssen
maintainer:    spencerjanssen@gmail.com

common deps
  build-depends:
    , base
    , containers
    , file-embed
    , megaparsec
    , relude
    , tasty
    , tasty-discover
    , tasty-hunit
    , text

  build-tool-depends: tasty-discover:tasty-discover -any
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common options
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    NamedFieldPuns
    OverloadedStrings
    TemplateHaskell
    TupleSections
    TypeApplications

  ghc-options:        -Wall

library
  import:          deps, options
  hs-source-dirs:  src
  exposed-modules:
    MegaParsecUtil
    Y2021.Day1
    Y2021.Day2
    Y2021.Day3
    Y2021.Day4
    Y2021.Day5

test-suite test
  import:         deps, options
  main-is:        Tests.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: src
  ghc-options:    -Werror
  other-modules:
    MegaParsecUtil
    Y2021.Day1
    Y2021.Day2
    Y2021.Day3
    Y2021.Day4
    Y2021.Day5
