cabal-version: 2.4
name:          aoc
version:       0.1.0.0
author:        Spencer Janssen
maintainer:    spencerjanssen@gmail.com

common deps
  build-depends:
    , base
    , containers
    , file-embed
    , filepath
    , megaparsec
    , psqueues
    , relude
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-smallcheck
    , text

  build-tool-depends: tasty-discover:tasty-discover
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common options
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DerivingVia
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    TemplateHaskell
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:        -Wall

library
  import:          deps, options
  hs-source-dirs:  src
  exposed-modules:
    AocUtil
    MegaParsecUtil
    Y2021.Day01
    Y2021.Day02
    Y2021.Day03
    Y2021.Day04
    Y2021.Day05
    Y2021.Day06
    Y2021.Day07
    Y2021.Day15
    Y2021.Day16
    Y2022.Day01
    Y2022.Day02
    Y2022.Day03
    Y2022.Day08
    Y2022.Day09
    Y2022.Day10

test-suite test
  import:         deps, options
  main-is:        Tests.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: src
  ghc-options:    -Werror
  other-modules:
    AocUtil
    MegaParsecUtil
    Y2021.Day01
    Y2021.Day02
    Y2021.Day03
    Y2021.Day04
    Y2021.Day05
    Y2021.Day06
    Y2021.Day07
    Y2021.Day15
    Y2021.Day16
    Y2022.Day01
    Y2022.Day02
    Y2022.Day03
    Y2022.Day08
    Y2022.Day09
    Y2022.Day10
