cabal-version: 2.4
name:          aoc
version:       0.1.0.0
author:        Spencer Janssen
maintainer:    spencerjanssen@gmail.com

common deps
  build-depends:
    , algebraic-graphs
    , base
    , containers
    , file-embed
    , filepath
    , fingertree
    , megaparsec
    , pretty-simple
    , psqueues
    , relude
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-smallcheck
    , text

  build-tool-depends: tasty-discover:tasty-discover
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common options
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    TemplateHaskell
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:        -Wall

library
  import:          deps, options
  hs-source-dirs:  src
  exposed-modules:
    AocUtil
    MegaParsecUtil
    Y2021.Day01
    Y2021.Day02
    Y2021.Day03
    Y2021.Day04
    Y2021.Day05
    Y2021.Day06
    Y2021.Day07
    Y2021.Day15
    Y2021.Day16
    Y2022.Day01
    Y2022.Day02
    Y2022.Day03
    Y2022.Day04
    Y2022.Day05
    Y2022.Day06
    Y2022.Day07
    Y2022.Day08
    Y2022.Day09
    Y2022.Day10
    Y2022.Day11
    Y2022.Day12
    Y2022.Day13
    Y2022.Day14
    Y2022.Day15
    Y2022.Day20
    Y2022.Day21
    Y2023.Day01
    Y2023.Day02
    Y2023.Day03
    Y2023.Day04

test-suite test
  import:         deps, options
  main-is:        Tests.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: src
  ghc-options:    -Werror
  other-modules:
    AocUtil
    MegaParsecUtil
    Y2021.Day01
    Y2021.Day02
    Y2021.Day03
    Y2021.Day04
    Y2021.Day05
    Y2021.Day06
    Y2021.Day07
    Y2021.Day15
    Y2021.Day16
    Y2022.Day01
    Y2022.Day02
    Y2022.Day03
    Y2022.Day04
    Y2022.Day05
    Y2022.Day06
    Y2022.Day07
    Y2022.Day08
    Y2022.Day09
    Y2022.Day10
    Y2022.Day11
    Y2022.Day12
    Y2022.Day13
    Y2022.Day14
    Y2022.Day15
    Y2022.Day20
    Y2022.Day21
    Y2023.Day01
    Y2023.Day02
    Y2023.Day03
    Y2023.Day04
